[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python>=0.15.0",
    "meson>=1.1.0",
    "ninja",
    "numpy<2.3",
    "setuptools_scm[toml]>=6.2",
    "Jinja2>=3.0",
]

[project]
name = 'qubic'
authors = [
    { name = 'Pierre Chanial', email = 'chanial@apc.in2p3.fr' },
    { name = 'Jean-Christophe Hamilton', email = 'hamilton@apc.in2p3.fr' },
    { name = 'Mikhail Stolpovskiy', email = 'mikhail.stolpovskiy@apc.univ-paris7.fr' },
    { name = 'Steve Torchinsky', email = 'satorchi@apc.in2p3.fr' },
    { name = 'Louise Mousset', email = 'mousset@apc.in2p3.fr' },
    { name = 'Mathias Régnier', email = 'mathias.p.regnier@gmail.com' },
    { name = "Tom Laclavère", email = "laclaver@apc.in2p3.fr" },
]
maintainers = [{ name = 'Steve Torchinsky', email = 'satorchi@apc.in2p3.fr' }]
description = 'Simulation and map-making tools for the QUBIC experiment.'
readme = 'README.md'
keywords = ['scientific computing']
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Fortran',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
]
requires-python = '>=3.12'
dependencies = [
    'astropy',
    'camb',
    'corner',
    'emcee',
    'GetDist',
    'healpy',
    'h5py',
    'iminuit',
    'pandas',
    'fgbuster @ git+https://github.com/fgbuster/fgbuster@master',
    'numpy<2.3',
    'progressbar',
    'py-cpuinfo',
    'pyoperators',
    'pysimulators',
    'pysm3',
    'qubicpack @ git+https://github.com/satorchi/qubicpack@master',
    'satorchipy @ git+https://github.com/satorchi/mypy@master',
    'scipy',
    'bottleneck',
    'scikit-learn',
    'schwimmbad',
    'imageio',
    "cairosvg",
    "ruamel.yaml",
    "jq",
]
dynamic = ['version']

[project.optional-dependencies]
mpi = ['mpi4py']
dev = ['mpi4py', 'pytest', 'pytest-cov']

[project.urls]
homepage = 'https://www.qubic.org.ar'
repository = 'https://github.com/qubicsoft/qubic'

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "-ra --cov=qubic"
testpaths = ["tests"]
markers = ["mpi: mark tests to be run using mpirun."]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
'*' = ['*']

[tool.setuptools_scm]
version_scheme = 'post-release'
fallback_version = '0.0.0'
