[project]
name = "cosmic-rays"
version = "0.1.0"
description = ""
packages = [{include = "cosmic_rays", from = "src"}]
authors = [
    {name = "Sofia Ferazzoli",email = "ferazzoli.sofia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroquery (>=0.4.11,<0.5.0)",
    "pytz (>=2025.2,<2026.0)",
    "astroplan (>=0.10.1,<0.11.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "jupyterlab (>=4.5.1,<5.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "numba (>=0.63.1,<0.64.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "healpy (>=1.19.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "qubicpack @ git+https://github.com/satorchi/qubicpack.git",
    "satorchipy @ git+https://github.com/satorchi/mypy.git",
    "h5py (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
crd-analysis = "cosmic_rays.cli.run_crd:main"
parameter-analysis = "cosmic_rays.cli.run_parameters_finetuning:main"   
