[project]
name = "observation-plan"
version = "0.1.0"
description = ""
packages = [{include = "observation_plan", from="src"}]
authors = [
    {name = "sofiaferazzoli",email = "sofiaferazzoli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroplan (>=0.10.1,<0.11.0)",
    "astropy (>=7.2.0,<8.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "astroquery (>=0.4.11,<0.5.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
observation-plan = "observation_plan.observationCompaign:main"